--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Digital Clock</title>
 </head>
@@ -10,23 +11,6 @@
         <div id="time"></div>
         <div id="date"></div>
     </div>
-    <script>
-        function updateClock() {
-            const now = new Date();
-            const hours = now.getHours().toString().padStart(2, '0');
-            const minutes = now.getMinutes().toString().padStart(2, '0');
-            const seconds = now.getSeconds().toString().padStart(2, '0');
-            
-            const dayNames = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-            const day = dayNames[now.getDay()];
-            const date = now.toLocaleDateString(undefined, { year: 'numeric', month: 'long', day: 'numeric' });
-
-            document.getElementById("time").innerText = `${hours}:${minutes}:${seconds}`;
-            document.getElementById("date").innerText = `${day}, ${date}`;
-        }
-
-        setInterval(updateClock, 1000);
-        updateClock();
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
